lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImTextureRef_t ImTextureRef;
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiDataType;        
typedef int ImGuiComboFlags;        
typedef int ImGuiSliderFlags;       
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API void ImGui_Image(ImTextureRef tex_ref, ImVec2 image_size);                                                                      
CIMGUI_API void ImGui_ImageEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 );
CIMGUI_API void ImGui_ImageWithBg(ImTextureRef tex_ref, ImVec2 image_size);                                                                
CIMGUI_API void ImGui_ImageWithBgEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 bg_col , ImVec4 tint_col );
CIMGUI_API bool ImGui_ImageButton(const char* str_id, ImTextureRef tex_ref, ImVec2 image_size);                                            
CIMGUI_API bool ImGui_ImageButtonEx(const char* str_id, ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 bg_col , ImVec4 tint_col );
CIMGUI_API bool ImGui_BeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags );
CIMGUI_API void ImGui_EndCombo(void);                                                                                                                          
CIMGUI_API bool ImGui_ComboChar(const char* label, int* current_item, const char*const items[], int items_count);                                              
CIMGUI_API bool ImGui_ComboCharEx(const char* label, int* current_item, const char*const items[], int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_Combo(const char* label, int* current_item, const char* items_separated_by_zeros);                                                       
CIMGUI_API bool ImGui_ComboEx(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items );           
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_DragFloat(const char* label, float* v);                                                 
CIMGUI_API bool ImGui_DragFloatEx(const char* label, float* v, float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags ); 
CIMGUI_API bool ImGui_DragFloat2(const char* label, float v[2]);                                              
CIMGUI_API bool ImGui_DragFloat2Ex(const char* label, float v[2], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat3(const char* label, float v[3]);                                              
CIMGUI_API bool ImGui_DragFloat3Ex(const char* label, float v[3], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat4(const char* label, float v[4]);                                              
CIMGUI_API bool ImGui_DragFloat4Ex(const char* label, float v[4], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloatRange2(const char* label, float* v_current_min, float* v_current_max);         
CIMGUI_API bool ImGui_DragFloatRange2Ex(const char* label, float* v_current_min, float* v_current_max, float v_speed , float v_min , float v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt(const char* label, int* v);                                                     
CIMGUI_API bool ImGui_DragIntEx(const char* label, int* v, float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags ); 
CIMGUI_API bool ImGui_DragInt2(const char* label, int v[2]);                                                  
CIMGUI_API bool ImGui_DragInt2Ex(const char* label, int v[2], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt3(const char* label, int v[3]);                                                  
CIMGUI_API bool ImGui_DragInt3Ex(const char* label, int v[3], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt4(const char* label, int v[4]);                                                  
CIMGUI_API bool ImGui_DragInt4Ex(const char* label, int v[4], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragIntRange2(const char* label, int* v_current_min, int* v_current_max);               
CIMGUI_API bool ImGui_DragIntRange2Ex(const char* label, int* v_current_min, int* v_current_max, float v_speed , int v_min , int v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalar(const char* label, ImGuiDataType data_type, void* p_data);                   
CIMGUI_API bool ImGui_DragScalarEx(const char* label, ImGuiDataType data_type, void* p_data, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components);  
CIMGUI_API bool ImGui_DragScalarNEx(const char* label, ImGuiDataType data_type, void* p_data, int components, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat(const char* label, float* v, float v_min, float v_max);                                                                                       
CIMGUI_API bool ImGui_SliderFloatEx(const char* label, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );                
CIMGUI_API bool ImGui_SliderFloat2(const char* label, float v[2], float v_min, float v_max);                                                                                    
CIMGUI_API bool ImGui_SliderFloat2Ex(const char* label, float v[2], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat3Ex(const char* label, float v[3], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  