src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ImageEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Image(ImTextureRef tex_ref, ImVec2 image_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ImageWithBgEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1, ImVec4 bg_col, ImVec4 tint_col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ImageWithBg(ImTextureRef tex_ref, ImVec2 image_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ImageButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1, ImVec4 bg_col, ImVec4 tint_col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ImageButton([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImTextureRef tex_ref, ImVec2 image_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginCombo([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string preview_value, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndCombo();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ComboCharEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr items, int items_count, int popup_max_height_in_items);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ComboChar([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr items, int items_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ComboEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, [MarshalAs(UnmanagedType.LPUTF8Str)] string items_separated_by_zeros, int popup_max_height_in_items);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Combo([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, [MarshalAs(UnmanagedType.LPUTF8Str)] string items_separated_by_zeros);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ComboCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr getter, System.IntPtr user_data, int items_count, int popup_max_height_in_items);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ComboCallback([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr getter, System.IntPtr user_data, int items_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloat4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloatRange2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_current_min, System.IntPtr v_current_max, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, [MarshalAs(UnmanagedType.LPUTF8Str)] string format_max, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragFloatRange2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_current_min, System.IntPtr v_current_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragInt4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragIntRange2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_current_min, System.IntPtr v_current_max, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, [MarshalAs(UnmanagedType.LPUTF8Str)] string format_max, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragIntRange2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_current_min, System.IntPtr v_current_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, float v_speed, System.IntPtr p_min, System.IntPtr p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragScalar([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components, float v_speed, System.IntPtr p_min, System.IntPtr p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DragScalarN([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
